
    HADOOP-10437. Fix the javac warnings in the conf and the util package.
    (szetszwo)

    HADOOP-10441. Namenode metric "rpc.RetryCache/NameNodeRetryCache.CacheHit"
    can't be correctly processed by Ganglia. (jing9)

    HADOOP-10449. Fix the javac warnings in the security package.  (szetszwo)

    HADOOP-10450. Build zlib native code bindings in hadoop.dll for Windows.
    (cnauroth)

  BREAKDOWN OF HADOOP-10184 SUBTASKS AND RELATED JIRAS

    HADOOP-10185. FileSystem API for ACLs. (cnauroth)

    HADOOP-10186. Remove AclReadFlag and AclWriteFlag in FileSystem API.
    (Haohui Mai via cnauroth)

    HADOOP-10187. FsShell CLI: add getfacl and setfacl with minimal support for
    getting and setting ACLs. (Vinay via cnauroth)

    HADOOP-10192. FileSystem#getAclStatus has incorrect JavaDocs. (cnauroth)

    HADOOP-10220. Add ACL indicator bit to FsPermission. (cnauroth)

    HADOOP-10241. Clean up output of FsShell getfacl. (Chris Nauroth via wheat9)

    HADOOP-10213. Fix bugs parsing ACL spec in FsShell setfacl.
    (Vinay via cnauroth)

    HADOOP-10277. setfacl -x fails to parse ACL spec if trying to remove the
    mask entry. (Vinay via cnauroth)

    HADOOP-10270. getfacl does not display effective permissions of masked
    entries. (cnauroth)

    HADOOP-10344. Fix TestAclCommands after merging HADOOP-10338 patch.
    (cnauroth)

    HADOOP-10352. Recursive setfacl erroneously attempts to apply default ACL to
    files. (cnauroth)

    HADOOP-10354. TestWebHDFS fails after merge of HDFS-4685 to trunk. (cnauroth)

    HADOOP-10361. Correct alignment in CLI output for ACLs. (cnauroth)

    HADOOP-10399. FileContext API for ACLs. (Vinayakumar B via cnauroth)

    HADOOP-10442. Group look-up can cause segmentation fault when certain
    JNI-based mapping module is used. (Kihwal Lee via jeagles)

Release 2.3.1 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES 

Release 2.3.0 - 2014-02-18
