@@ -472,6 +472,9 @@ Release 2.4.0 - UNRELEASED
     HADOOP-10450. Build zlib native code bindings in hadoop.dll for Windows.
     (cnauroth)
 
+    HADOOP-10301. AuthenticationFilter should return Forbidden for failed
+    authentication. (Daryn Sharp via jing9)
+
   BREAKDOWN OF HADOOP-10184 SUBTASKS AND RELATED JIRAS
 
     HADOOP-10185. FileSystem API for ACLs. (cnauroth)
